# Cloud-Cost-Optimizer-OpenEnv

./: Dockerfile  README.md  baseline.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: Dockerfile  app.py  environment.py
